[package]
name = "laplace-eq-therm"
version = "0.1.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Contains structures used throughout the project"
repository = "https://github.com/paxbun/laplace-eq-therm"
license = "MIT"

[workspace]
members = ["client", "server"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"