[package]
name = "laplace-eq-therm-client-common"
version = "0.1.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Implements a common logic (HTTP request) used by the client programs."
repository = "https://github.com/paxbun/laplace-eq-therm"
license = "MIT"

[dependencies]
laplace-eq-therm = { path = ".." }
reqwest = { version = "0.11.5", features = [ "blocking" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"