[package]
name = "laplace-eq-therm-client-mock"
version = "0.1.0"
edition = "2018"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laplace-eq-therm = { path = ".." }
laplace-eq-therm-client-common = { path = "../client-common" }