[package]
name = "laplace-eq-therm-client"
version = "0.1.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Reads temperature data from the Arduino device via serial communication and sends it to the server."
repository = "https://github.com/paxbun/laplace-eq-therm"
license = "MIT"

[dependencies]
laplace-eq-therm = { path = ".." }
laplace-eq-therm-client-common = { path = "../client-common" }