[package]
name = "laplace-eq-therm-client"
version = "0.1.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Reads temperature data from the Arduino device via serial communication and sends it to the server."
repository = "https://github.com/paxbun/laplace-eq-therm"
license = "MIT"

[dependencies]
laplace-eq-therm = { path = ".." }
serialport = "4.0.1"
reqwest = { version = "0.11.5", features = [ "blocking" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"