[package]
name = "laplace-eq-therm-server"
version = "0.1.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "Implements the server program where the main computation is performed"
repository = "https://github.com/paxbun/laplace-eq-therm"
license = "MIT"

[dependencies]
laplace-eq-therm = { path = ".." }
rocket = "0.5.0-rc.1"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59.1"